--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Audit",
-    "slug": "Audit",
+    "name": "MusicStems",
+    "slug": "MusicStems",
     "version": "1.0.0"
   }
 }
