--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "^4.5.2",
-    "@react-native-firebase/app": "^20.3.0",
-    "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "^18.3.3",
     "expo": "~51.0.25",
     "expo-av": "^14.0.6",
-    "expo-file-system": "^17.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-media-library": "~16.0.4",
     "expo-music-library": "^1.0.0",
+    "expo-permissions": "^14.4.0",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -33,10 +37,12 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.6.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/redux-persist": "^4.3.1",
     "typescript": "^5.5.4"
   },
   "private": true,
